@@ -12,7 +12,10 @@
     = task.name
     %dt
       - if task.due_at < Date.today
-        %span.warn= distance_of_time_in_words(task.due_at, Date.today) << " late, was due on #{task.due_at.strftime('%b %e')}"
+        - if task.due_at.utc == Task::ASAP.to_date
+          Due now!
+        - else
+          %span.warn= distance_of_time_in_words(task.due_at, Date.today) << " late, was due on #{task.due_at.strftime('%b %e')}"
       - elsif task.due_at > Date.today
         = "Due in " << distance_of_time_in_words(Date.today, task.due_at)
       - else
